Swap String.format() for "".formatted()